[package]
name = "poem-queryext"
version = "0.1.2"
edition = "2021"
description = "Auto deserialize struct from query string"
license = "MIT OR Apache-2.0"
authors = ["cx<286977246@qq.com>"]
keywords = ["poem-query-parse"]
repository = "https://github.com/cxandlj/poem-queryext.git"


[dependencies]
poem = "3.1.7"
serde = "1.0.218"
serde_qs = "0.13.0"
urlencoding = "2.1.3"
